Fixed border color of dropdown last item

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -51,7 +51,7 @@
       height: auto;
       
       &:last-of-type {
-        border-bottom: 1px solid @color2;;
+        border-bottom: 1px solid #cccccc;;
       }
     }
   }
