--- a/UJCSystem/ITJakub.Web.Hub/Areas/BookReader/Views/BookReader/Listing.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/BookReader/Views/BookReader/Listing.cshtml
@@ -20,7 +20,7 @@
 
 </div>
 
-<div id="readerOptions" class="hide" data-options="@Html.Encode(Json.Serialize(PortalOption.Value.ReaderConfig.ToArray()))"></div>
+<div id="readerOptions" class="hide" data-options="@Html.Encode(Json.Serialize(PortalOption.Value.ReaderConfig))"></div>
 
 <div id="ReaderDiv" data-bookid="@Model.BookId" data-versionid="@Model.SnapshotId" data-has-image-url="@Url.Action("HasBookImage", "Reader", new {Area = ""})" data-can-print="@Model.CanPrintEdition">
     <div id="ReaderHeaderDiv">
