--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_CooperationListPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_CooperationListPage.cshtml
@@ -18,6 +18,7 @@
         <td class="buttons">
             <button type="button" class="remove-role btn btn-sm btn-default" disabled="@(!ViewData.HasPermissionFor().AdminProject)">
                 <i class="fa fa-trash"></i>
+                <span class="saving-icon loading-small-button hide"></span>
             </button>
         </td>
     </tr>
