Add loading bars to roles and permissions management pages

--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_RoleListWidgetPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_RoleListWidgetPage.cshtml
@@ -31,6 +31,7 @@
                  {
                      <a class="remove-role btn btn-sm btn-default">
                          <i class="fa fa-trash"></i>
+                         <span class="saving-icon loading-small-button hide"></span>
                      </a>
                  }
              </td>
