--- a/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_UserListWidgetPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Permission/Widget/_UserListWidgetPage.cshtml
@@ -13,6 +13,7 @@
         <td class="buttons">
             <a class="btn btn-sm btn-default remove-user-from-role">
                 <i class="fa fa-user-times"></i>
+                <span class="saving-icon loading-small-button hide"></span>
             </a>
         </td>
     </tr>
