--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -75,7 +75,10 @@
 
   .reader-tool-panel {
     padding: 10px 0;
-    height: 100%;
+    flex-basis: 50%;
+    flex-shrink: 0;
+    height: unset;
+    overflow-y: auto;
 
     > * {
       padding: 0 10px;
