Removed not needed styles

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
@@ -759,7 +759,7 @@ body {
 }
 
 .reader-text-container {
-    &.reader-text-show-page-names div.page-name, div {
+    &.reader-text-show-page-names div.page-name {
         display: block;
     }
 
