--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -1594,7 +1594,7 @@ table {
                 display: inline-block;
             }
 
-            a.btn-default {
+            button.btn-sm {
                 margin-bottom: 0;
                 margin-left: 0.5em;
             }
