--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_ChapterRow.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ITJakub.Web.Hub.Areas.Admin.Models
+@using ITJakub.Web.Hub.Helpers
 @using Scalesoft.Localization.AspNetCore
 @model ITJakub.Web.Hub.Areas.Admin.Models.ChapterEditorRowViewModel
 @inject ILocalizationService Localizer
@@ -23,17 +24,17 @@
         </div>
         <div class="buttons">
             <span class="page-name">[@Model.Chapter.BeginningPageName]</span>
-            <select name="chapter-page" class="form-control select-page selectpicker hide" value="@Model.Chapter.BeginningPageName" data-inited="false">
+            <select name="chapter-page" class="form-control select-page selectpicker hide" value="@Model.Chapter.BeginningPageName" data-inited="false" >
             </select>
-            <a class="edit-chapter btn btn-sm btn-default" title="@Localizer.Translate("EditChapter", "RidicsProject")">
+            <button type="button" class="edit-chapter btn btn-sm btn-default" title="@Localizer.Translate("EditChapter", "RidicsProject")" disabled="@(!ViewData.HasPermissionFor().EditProject)">
                 <i class="fa fa-pencil"></i>
-            </a>
-            <a class="discard-chapter-changes btn btn-sm btn-default hide" title="@Localizer.Translate("DiscardChapterChanges", "RidicsProject")">
+            </button>
+            <button type="button" class="discard-chapter-changes btn btn-sm btn-default hide" title="@Localizer.Translate("DiscardChapterChanges", "RidicsProject")" disabled="@(!ViewData.HasPermissionFor().EditProject)">
                 <i class="fa fa-times"></i>
-            </a>
-            <a class="remove-chapter btn btn-sm btn-default" title="@Localizer.Translate("DeleteChapter", "RidicsProject")">
+            </button>
+            <button type="button" class="remove-chapter btn btn-sm btn-default" title="@Localizer.Translate("DeleteChapter", "RidicsProject")" disabled="@(!ViewData.HasPermissionFor().EditProject)">
                 <i class="fa fa-trash"></i>
-            </a>
+            </button>
         </div>
     </div>
     <div class="sub-chapters">
