--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_PageList.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Helpers
+@using Scalesoft.Localization.AspNetCore
 @model IList<Vokabular.MainService.DataContracts.Contracts.PageContract>
 @inject ILocalizationService Localizer
 
@@ -9,7 +10,7 @@
                 <div class="row">
                     <div class="col-xs-8">@Localizer.Translate("UnsavedChanges", "RidicsProject")</div>
                     <div class="col-xs-4 text-right">
-                        <button type="button" class="btn btn-default save-pages-button">@Localizer.Translate("Save", "Admin")</button>
+                        <button type="button" class="btn btn-default save-pages-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localizer.Translate("Save", "Admin")</button>
                     </div>
                 </div>
             </div>
@@ -26,8 +27,8 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-md-9 panel-buttons text-right">
-                            <button type="button" class="btn btn-default add-page-button">@Localizer.Translate("AddPage", "Admin")</button>
-                            <button type="button" class="btn btn-default form-control" id="project-pages-edit-button">@Localizer.Translate("NewPages", "Admin")</button>
+                            <button type="button" class="btn btn-default add-page-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localizer.Translate("AddPage", "Admin")</button>
+                            <button type="button" class="btn btn-default form-control" id="project-pages-edit-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localizer.Translate("NewPages", "Admin")</button>
                         </div>
                     </div>
                 </div>
@@ -37,11 +38,11 @@
                     </div>
                     <div class="panel-bottom-buttons text-right">
                         <label for="pageMoveDistance">@Localizer.Translate("Shift", "RidicsProject")</label>
-                        <input type="number" id="pageMoveDistance" class="page-move-distance form-control" value="1" min="1" max="@Model.Count"/>
-                        <button type="button" class="btn btn-default move-page-up" title="@Localizer.Translate("ShiftPageUp", "RidicsProject")">
+                        <input type="number" id="pageMoveDistance" class="page-move-distance form-control" value="1" min="1" max="@Model.Count" disabled="@(!ViewData.HasPermissionFor().EditProject)"/>
+                        <button type="button" class="btn btn-default move-page-up" title="@Localizer.Translate("ShiftPageUp", "RidicsProject")" disabled="@(!ViewData.HasPermissionFor().EditProject)">
                             <span class="glyphicon glyphicon-arrow-up"></span>
                         </button>
-                        <button type="button" class="btn btn-default move-page-down" title="@Localizer.Translate("ShiftPageDown", "RidicsProject")">
+                        <button type="button" class="btn btn-default move-page-down" title="@Localizer.Translate("ShiftPageDown", "RidicsProject")" disabled="@(!ViewData.HasPermissionFor().EditProject)">
                             <span class="glyphicon glyphicon-arrow-down"></span>
                         </button>
                     </div>
@@ -73,7 +74,7 @@
 
     <hr style="margin: 0 15px 10px 15px;" />
     <div class="project-bottom-buttons">
-        <button type="button" class="btn btn-default save-pages-button">@Localizer.Translate("Save", "Admin")</button>
+        <button type="button" class="btn btn-default save-pages-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localizer.Translate("Save", "Admin")</button>
     </div>
 </div>
 
