Minor style improvement

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
@@ -775,8 +775,8 @@ body {
 .reader-text-pages-separated {
     div.page-wrapper {
         padding-bottom: 1em;
-        margin-bottom: 1em;
-        @page-bottom-border-color: #b3b3b3; 
+        margin-bottom: 2em;
+        @page-bottom-border-color: #999; 
         background-image: linear-gradient(to right, white 30%, @page-bottom-border-color 30%, @page-bottom-border-color 70%, rgba(255,255,255,0) 0%);
         background-position: bottom;
         background-size: 5% 5px;
