--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Images.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ITJakub.Web.Hub.Core
+@using ITJakub.Web.Hub.Helpers
 @using Scalesoft.Localization.AspNetCore
 @model IList<Vokabular.MainService.DataContracts.Contracts.PageWithImageInfoContract>
 @inject ILocalizationService Localization
@@ -16,7 +17,7 @@
                         </div>
                     </div>
                     <div class="col-xs-8 panel-buttons text-right">
-                        <button type="button" class="btn btn-default add-page-button">@Localization.Translate("AddPage", "Admin")</button>
+                        <button type="button" class="btn btn-default add-page-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localization.Translate("AddPage", "Admin")</button>
                     </div>
                 </div>
             </div>
@@ -39,7 +40,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6 panel-buttons text-right">
-                            <button type="button" class="btn btn-default upload-new-image-button">
+                            <button type="button" class="btn btn-default upload-new-image-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">
                                 @Localization.Translate("UploadNewVersion", "RidicsProject")
                             </button>
                         </div>
