--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Resource/_Preview.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Helpers
+@using Scalesoft.Localization.AspNetCore
 @using Vokabular.Shared.AspNetCore.Extensions
 @inject ILocalizationService Localization
 
@@ -27,7 +28,7 @@
         </div>
         
         <div class="col-xs-12 col-sm-6 col-md-2">
-            <button type="button" class="btn btn-default add-page-button">@Localization.Translate("AddPage", "Admin")</button> 
+            <button type="button" class="btn btn-default add-page-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localization.Translate("AddPage", "Admin")</button> 
         </div>
         
         <div class="col-xs-12 col-sm-12 col-md-2 page-indicator"></div>
