Refactor and enable favorite headwords

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
@@ -32,9 +32,9 @@
 
 .search-area {
     width: 100%;
-    /*float: left;*/
+    float: left;
     padding: 0;
-    /*padding-right: 10px;*/
+    padding-right: 10px;
 }
 
 .short-search-area {
@@ -50,8 +50,8 @@
 }
 
 .saved-word-area > .dictionary-header {
-    height: 34px;
-    padding: 6px 8px 5px 8px;
+    height: 32px;
+    padding: 5px 8px 4px 8px;
 }
 
 .dictionary-header span {
