--- a/UJCSystem/ITJakub.Web.Hub/Areas/Dictionaries/Views/Dictionaries/Listing.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Dictionaries/Views/Dictionaries/Listing.cshtml
@@ -40,7 +40,7 @@
             </div>
             <div id="regExSearchDiv"></div>
         </div>
-        <div class="saved-word-area hidden" id="saved-word-area">
+        <div class="saved-word-area" id="saved-word-area">
             <div class="dictionary-header">
                 <span>@Localizer.Translate("SavedKeywords", "Dictionaries")</span>
                 <span class="saved-word-area-more"><span class="glyphicon glyphicon-collapse-down"></span></span>
