--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PublicationListPage.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_PublicationListPage.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Helpers
+@using Scalesoft.Localization.AspNetCore
 @model ITJakub.Web.Hub.Areas.Admin.Models.ListViewModel<ITJakub.Web.Hub.Areas.Admin.Models.SnapshotViewModel>
 @inject ILocalizationService Localizer
 
@@ -20,7 +21,16 @@ else
             @*<td>@snapshotViewModel.PublishedAudioResourceCount</td>*@
             <td>@snapshotViewModel.Author</td>
             <td>@snapshotViewModel.Comment</td>
-            <td class="duplicate-column"><a asp-controller="Publication" asp-action="DuplicateSnapshot" asp-route-snapshotId="@snapshotViewModel.Id">@Localizer.Translate("Duplicate", "Admin")</a></td>
+            <td class="duplicate-column">
+                @if (ViewData.HasPermissionFor().EditProject)
+                {
+                    <a asp-controller="Publication" asp-action="DuplicateSnapshot" asp-route-snapshotId="@snapshotViewModel.Id">@Localizer.Translate("Duplicate", "Admin")</a>
+                }
+                else
+                {
+                    @Html.Raw("&nbsp;-&nbsp;")
+                }
+            </td>
         </tr>
     }
 }
