--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Note.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Note.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Helpers
+@using Scalesoft.Localization.AspNetCore
 @inject ILocalizationService Localizer
 
 <div class="container-fluid">
@@ -12,7 +13,7 @@
             <div class="loader"></div>
             <textarea class="note-editor-textarea hide"></textarea>
             <div class="bottom-buttons hide">
-                <button class="btn btn-default" id="saveNote">@Localizer.Translate("Save", "Admin")</button>
+                <button class="btn btn-default" id="saveNote" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localizer.Translate("Save", "Admin")</button>
             </div>
         </div>
     </div>
