--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/_Publications.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Helpers
+@using Scalesoft.Localization.AspNetCore
 @model ITJakub.Web.Hub.Areas.Admin.Models.SnapshotListViewModel
 @inject ILocalizationService Localizer
 
@@ -44,7 +45,14 @@
         <div id="snapshotPagination" class="text-center"></div>
 
         <div class="project-bottom-buttons">
-            <a asp-controller="Publication" asp-action="NewSnapshot" asp-route-projectId="@Model.ProjectId" class="btn btn-default">@Localizer.Translate("CreateNewPublication", "Admin")</a>
+            @if (ViewData.HasPermissionFor().EditProject)
+            {
+                <a asp-controller="Publication" asp-action="NewSnapshot" asp-route-projectId="@Model.ProjectId" class="btn btn-default">@Localizer.Translate("CreateNewPublication", "Admin")</a>
+            }
+            else
+            {
+                <button type="button" class="btn btn-default" disabled="disabled">@Localizer.Translate("CreateNewPublication", "Admin")</button>
+            }
         </div>
     </div>
 </div>
