--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_EditMetadataButtons.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Work/SubView/_EditMetadataButtons.cshtml
@@ -1,4 +1,5 @@
-﻿@using Scalesoft.Localization.AspNetCore
+﻿@using ITJakub.Web.Hub.Helpers
+@using Scalesoft.Localization.AspNetCore
 @model ITJakub.Web.Hub.Areas.Admin.Models.ProjectWorkMetadataViewModel
 
 @inject ILocalizationService Localizer
@@ -28,7 +29,7 @@
             <div class="col-xs-12 col-md-8">
                 <div class="project-form-bottom-buttons">
                     <div class="work-metadata-view-button-panel">
-                        <button class="btn btn-default work-metadata-edit-button">@Localizer.Translate("Edit", "Admin")</button>
+                        <button class="btn btn-default work-metadata-edit-button" disabled="@(!ViewData.HasPermissionFor().EditProject)">@Localizer.Translate("Edit", "Admin")</button>
                     </div>
                     <div class="work-metadata-editor-button-panel">
                         <div class="col-xs-12 col-md-8">
