--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Admin/css/ridics.project.less
@@ -39,6 +39,10 @@
     &:hover {
         background-color: #f0f0f0;
     }
+
+    a.forbidden-access {
+        cursor: not-allowed;
+    }
 }
 
 #new-project-button {
