--- a/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Areas/Admin/Views/Project/Project.cshtml
@@ -48,7 +48,7 @@
         <div class="col-xs-12">
             <div class="project-title-header">
                 <span class="project-title">@Model.Name</span>
-                <button class="rename-project-button btn btn-default" title="@Localizer.Translate("Rename", "Admin")">
+                <button class="rename-project-button btn btn-default" title="@Localizer.Translate("Rename", "Admin")" disabled="@(!ViewData.HasPermissionFor().EditProject)">
                     <i class="fa fa-pencil"></i>
                 </button>
                 <br/>
