Changed position of page number

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
@@ -761,6 +761,8 @@ body {
 .reader-text-container {
     &.reader-text-show-page-names div.page-name {
         display: block;
+        margin-top: -1.5em;
+        margin-bottom: 2em;
     }
 
     div.page-name {
