--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
@@ -394,6 +394,10 @@ body {
     max-width: 100%;
     height: auto;
     min-height: 100px;
+    
+    &.loading-page {
+        padding-top: 2em;
+    }
 }
 
 .page.loading {
