--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/BookReader/css/readerStyle.less
@@ -644,7 +644,8 @@ button {
         padding: 0px;
 
         .edition-note-text {
-          overflow-y: auto;
+          overflow-y: unset;
+          max-height: none;
         }
       }
     }
