--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
@@ -146,7 +146,10 @@
 }
 
 .dictionary-result-headword {
-
+    &:hover {
+        cursor: pointer;
+        text-decoration: underline;
+    }
 }
 
 .dictionary-headword-highlight {
