BookReader - add info about no result searched

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/Plugins/ITJakub.Reader.less
@@ -848,6 +848,13 @@ div.dummy-page {
     margin-top: 2px;
 }
 
+.reader-search-result-items-div {
+    .no-results {
+        margin-top: 0.5em;
+        text-align: center;   
+    }
+}
+
 .reader-search-result-name{
     font-weight: bold;
     margin-right: 5px;
