--- a/UJCSystem/ITJakub.Web.Hub/Views/Account/UserProfile/_UserRoles.cshtml
+++ b/UJCSystem/ITJakub.Web.Hub/Views/Account/UserProfile/_UserRoles.cshtml
@@ -5,7 +5,7 @@
 <div class="row">
     <div class="col-md-offset-1 col-lg-offset-2 col-md-10 col-lg-8">
         <div class="panel panel-default">
-            <div class="panel-heading">@Localizer.Translate("UserRoles", "Account")</div>
+            <div class="panel-heading">@Localizer.Translate("UserIsMemberOfGroups", "Account")</div>
             <div class="panel-body">
                 <div class="table-responsive">
                     <table class="table table-hover">
