Adjust styles for favorite headwords

--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/Areas/Dictionaries/css/itjakub.dictionaries.less
@@ -171,7 +171,7 @@ a.dictionary-result-headword-book {
 }
 
 .dictionary-result-headword-favorite:hover {
-    color: @item-background-color;
+    color: @favorite-headword-border-color;
 }
 
 .saved-words-body {
@@ -180,9 +180,10 @@ a.dictionary-result-headword-book {
 
 .saved-word {
     margin: 5px;
-    background-color: @item-background-color;
+    background-color: @favorite-headword-color;
     padding: 5px;
     border-radius: 5px;
+    border: solid 1px @favorite-headword-border-color;
     display: inline-block;
     white-space: nowrap;
 }
@@ -190,15 +191,15 @@ a.dictionary-result-headword-book {
 .saved-word-text {
     color: white;
     cursor: pointer;
-}
 
-.saved-word-text:hover {
-    color: black;
+    &:hover {
+        color: black;
+        text-decoration: underline;
+    }
 }
 
 .saved-word-remove {
     cursor: pointer;
-    margin-top: 2px;
 }
 
 .saved-word-area-more {
