--- a/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Colors.less
+++ b/UJCSystem/ITJakub.Web.Hub/wwwroot/css/ITJakub.Colors.less
@@ -8,6 +8,8 @@
 
 @reader-bookmark-ico-online: #FD4F31;
 @reader-bookmark-ico-local: purple;
+@favorite-headword-color: #CC9900;
+@favorite-headword-border-color: #8E6B00;
 
 @menu-font-color: white;
 @separation-line-color: #E5E5E5;
